--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/style.css
@@ -1,27 +1,39 @@
-.caixa {
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
-  }
+.super-mario {
+  width: 200px;
+  left: 90px;
+  top: 80px;
+  position: absolute
+
+}
+
+.goomba {
+  width: 100px;
+  left: 120px;
+  top: 400px;
+  position: absolute
   
-  .width-and-height {
-    height: 50px;
-    width: 50px;
-  }
+}
+
+.baloon {
+  width: 200px;
+  left: 500px;
+  top: 350px;
+  position: absolute
   
-  /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-  .padding {
-  padding: 20px;
-  }
-  
-  /* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-  .margin {
-  margin: 30px;
-  }
-  
-  /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-  .border {
-    border: 5px solid black;
-  }
+}
+
+.speach {
+  font-size: 25px;
+  left: 500px;
+  top: 350px;
+  position: absolute
+  z-index: index;2
+}
+
+.bowser {
+  width: 200px;
+  left: 680px;
+  top: 460px;
+  position: absolute
+
+}
